/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-06 01:34 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/pmgr/hbpk-add.in
  * base/pmgr/hbpk-del.in
  * base/pmgr/hbpk-ls.in
    * another try to fit HBPK_WORKDIR= portable between
      shells

    ; anyway don't use working directory in path
      containing spaces

2025-11-06 01:13 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + hbssh2-alkresin/Makefile
  + hbssh2-alkresin/hbssh2.hbp
  + hbssh2-alkresin/patch-00
  + hbssh2-alkresin/patch-01
    + quick portage of Alexander Kresin's hbssh2

  + libssh2/Makefile
    + added libssh2 1.11.1, build depends on cmake, runtime
      also needs OpenSSL

2025-11-03 22:40 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * build/libpq9/patch-00
    ! patch out --allow-multiple-definition and --disable-auto-import
      from lib's LDFLAGS

2025-11-03 22:27 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * build/harbour-yaml/Makefile
  * build/harbour-yaml/patch-00
    ! likely in the private "port" system we shouldn't reference
      any host system include paths

2025-11-03 21:32 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + build/bison/Makefile
  + build/bison-inherit/Makefile
  + build/cmake-binary/Makefile
  + build/flex/Makefile
  + build/flex-inherit/Makefile
  * build/m4/Makefile
  + build/m4-inherit/Makefile
  + build/ninja-binary/Makefile
    + added, tested, tried, updated significant amount
      of these base build tools, because building
      PostgreSQL 18.0 libpq client library is now a struggle.
      Bison and friends is likely not needed to build client
      library itself, yet PG build script requests them.

  + build/harbour-yaml/Makefile
  + build/harbour-yaml/patch-00
    + a study how to unpack Harbour 3.4 tree partially and make