@@ -3,6 +3,16 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+
+2025-11-07 00:04 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * base/pmgr/hbpk-del.in
+    ! fix for path with spaces
+
+  * common.mk
+    * CMake using cmake_link_script does not call back to MSYS2
+      shell properly, therefore we have to also make a .bat
+      wrapper for Zig
+
 2025-11-06 01:34 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * base/pmgr/hbpk-add.in
   * base/pmgr/hbpk-del.in
